--- a/gzbxnew/src/main/AndroidManifest.xml
+++ b/gzbxnew/src/main/AndroidManifest.xml
@@ -1,21 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dk.mp.apps.gzbxnew"
-    android:sharedUserId="com.dk.mp">
 
+    package="com.dk.mp.apps.gzbxnew">
 
-    <application
-        android:allowBackup="true"
-        android:label="故障报修"
-        android:noHistory="true">
-        <activity
-            android:name="com.dk.mp.apps.gzbxnew.FaultRepairMainActivity"
-            android:label="故障报修"
-            android:screenOrientation="portrait"></activity>
+    <application android:allowBackup="true" android:label="@string/app_name"
+        android:supportsRtl="true">
 
-        <activity
-            android:name="com.dk.mp.apps.gzbxnew.FaultRepairApplyActivity"
-            android:screenOrientation="portrait">
+        <activity android:name="com.dk.mp.apps.gzbxnew.FaultRepairMainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/noAnimThemep">
             <intent-filter>
                 <action android:name="gzbx" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -23,11 +15,20 @@
         </activity>
 
         <activity
+            android:name="com.dk.mp.apps.gzbxnew.FaultRepairApplyActivity"
+            android:screenOrientation="portrait"></activity>
+
+
+
+        <activity
             android:name="com.dk.mp.apps.gzbxnew.FaultRepairDetailActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity
             android:name="com.dk.mp.apps.gzbxnew.FaultRepairAddActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.dk.mp.apps.gzbxnew.ImagePreviewActivity"
             android:screenOrientation="portrait"></activity>
 
         <activity
@@ -63,4 +64,6 @@
             android:screenOrientation="portrait"></activity>
 
     </application>
+
 </manifest>
+
