--- a/cjcx/src/main/AndroidManifest.xml
+++ b/cjcx/src/main/AndroidManifest.xml
@@ -4,14 +4,22 @@
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".ScoreInquiryListActivity"
+        <activity android:name=".XueQiListActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="cjcx" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScoreInquiryDetailActivity"
+        <activity android:name=".BaiJiListActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name=".XueShengListActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name=".CjDetailActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
