新增搜索功能

--- a/jyxx/src/main/AndroidManifest.xml
+++ b/jyxx/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.dk.mp.jyxx.ui.JyxxDetailActivity"
+        <activity android:name="com.dk.mp.jyxx.ui.JyxxSearchActivity"
             android:screenOrientation="portrait">
+
         </activity>
     </application>
 
