--- a/sxxj/build.gradle
+++ b/sxxj/build.gradle
@@ -27,6 +27,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-
+    compile 'com.leon:lfilepickerlibrary:1.7.0'
     compile project(':core')
 }
